# Claudecode-Codex-Gemini

./: .gitignore  README.md  pyproject.toml
.claude/commands/: ai-code.md  ai-review.md  kim-api.md  kim-code.md  kim-crud.md  kim-form.md  kim-help.md  kim-plan.md  kim-review.md  kim-setup.md  kim-team.md  kim-ui2code.md
.claude/skills/ai-orchestrator/: skill.yaml
.claude/skills/kim-orchestrator/: skill.yaml
.claude/skills/kim-orchestrator/prompts/: health-check.md  phase1-analyze.md  phase2-code.md  phase3-review.md
.claude/skills/kim-orchestrator/scripts/: orchestrate.sh
.github/workflows/: ci.yml
docs/: claude-code-specs.md  comparison.md  installation.md  troubleshooting.md  usage.md
examples/: README.md
examples/alternative-auth-impl/: README.md
examples/login-feature/: README.md
examples/rbac-system/: README.md
mcp-servers/: INSTALLATION.md
mcp-servers/codex-server/: index.js
mcp-servers/gemini-server/: index.js
tests/: __init__.py  conftest.py
tests/auth/: test_schemas.py  test_utils.py
